Adding in the about me section, added img, and a title, and description.. still ongoing

--- a/portfolio/src/vars.css
+++ b/portfolio/src/vars.css
@@ -1,6 +1,6 @@
 :root {
 /* Colors */
---color-text: #fff;
+--color-text: pink;
 --color-primary: #576cbc;
 --color-secondary: #19376d;
 --color-dark: #0b2447;
