--- a/portfolio/src/components/Hero/Hero.module.css
+++ b/portfolio/src/components/Hero/Hero.module.css
@@ -69,3 +69,31 @@
         transform: translate(0, -0px);
     }
 }
+
+.topBlur {
+    position: absolute;
+    width: 50vw;
+    height: 50vw;
+    min-width: 350px;
+    min-width: 350px;
+    top: -128px;
+    left: 10vw;
+    border: 764px;
+    background-color: rgba(211, 211, 211, 0.7);
+    filter: blur(100px);
+    z-index: 0;
+}
+
+.bottomBlur {
+    position: absolute;
+    width: 70vw;
+    height: 50vw;
+    min-width: 350px;
+    min-width: 250px;
+    top: -128px;
+    left: 10vw;
+    border: 764px;
+    background-color: rgba(211, 211, 211, 0.7);
+    filter: blur(100px);
+    z-index: 0;
+}
