--- a/portfolio/src/components/Hero/Hero.module.css
+++ b/portfolio/src/components/Hero/Hero.module.css
@@ -12,21 +12,26 @@
 }
 
 .content {
-    color: pink;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     color: var(--color-text);
     z-index: 1;
+    background: transparent;
+    border: none;
+    box-shadow: none;
+
 }
 
 .title {
     font-size: 72px;
     font-weight: 900;
-    color: pink;
+    color: var(--color-text);
     margin-bottom: 33px;
     font-family: var(--font-roboto);
-    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 0) 120%);
+    background: transparent;
+    border: none;
+    box-shadow: none;
     /* -webkit-text-fill-color: transparent; */
     /* -webkit-background-clip: text; */
 }
@@ -35,6 +40,10 @@
     font-size: 30px;
     font-family: var(--font-roboto);
     margin-bottom: 52px;
+    background: transparent;
+    border: none;
+    box-shadow: none;
+
 }
 
 .contactBtn {
@@ -51,6 +60,9 @@
 .heroImg {
     width: 50%;
     z-index: 1;
+    background: transparent;
+    border: none;
+    box-shadow: none;
 
     animation-name: floating;
     animation-duration: 3s;
@@ -77,7 +89,7 @@
     min-width: 350px;
     min-width: 350px;
     top: -128px;
-    left: 10vw;
+    left: -10vw;
     border: 764px;
     background-color: rgba(211, 211, 211, 0.7);
     filter: blur(100px);
