Adding about picture and icons

--- a/portfolio/src/components/Navbar/Navbar.module.css
+++ b/portfolio/src/components/Navbar/Navbar.module.css
@@ -8,7 +8,7 @@
     padding-top: 61px;
     z-index: 2;
     margin: 0 10%;
-    background-color: var(--color-bg);
+    background-color: var(--color-primary);
 
 }
 
