--- a/portfolio/src/components/Hero/Hero.module.css
+++ b/portfolio/src/components/Hero/Hero.module.css
@@ -109,3 +109,13 @@
     filter: blur(100px);
     z-index: 0;
 }
+
+@media screen and (max-width: 830px) {
+    .container {
+        flex-direction: column-reverse;
+    };
+    .content {
+        align-items: center;
+    }
+
+}
