--- a/portfolio/src/components/About/About.module.css
+++ b/portfolio/src/components/About/About.module.css
@@ -1,5 +1,91 @@
-section div img {
+@import "../../vars.css";
+
+.container {
+    position: relative;
+    background-color:var(--color-primary);
+    border-radius: 15px;
+    padding: 73px;
+    margin-top: 129px;
+    z-index: 1;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.title {
+    color: var(--color-text);
+    font-size: 35px;
+    font-weight: 700;
+    letter-spacing: 1.75px;
+    text-transform: uppercase;
+    background: transparent;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background: transparent;
+}
+
+.aboutImage {
     width: 30vw;
     height: 30vw;
     border-radius: 50%;
+}
+
+.aboutItems {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    background: transparent;
+}
+
+.aboutItem {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 20px;
+    list-style: none;
+    padding: 25px;
+    background-image: linear-gradient(135deg, var(--color-primary), var(--color-text));
+    background-size: 0 100%;
+}
+
+.aboutItem:hover {
+    background-size: 100% 100%;
+    transition: background-size 0.5s;
+}
+
+.aboutItem h3 {
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.aboutItem p {
+    font-size: 20px;
+}
+
+@media screen and (max-width: 830px) {
+    .container {
+        background-color: transparent;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .content {
+        flex-direction: column;
+    }
+
+    .aboutImage {
+        display: none;
+    }
+
+    .aboutItems {
+        margin-top: 29px;
+    }
+
+    .aboutItem {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
