Added CSS, just need to fix over all color scheme

--- a/portfolio/src/vars.css
+++ b/portfolio/src/vars.css
@@ -2,7 +2,7 @@
 /* Colors */
 --color-text: #E5A4CB;
 --color-primary: #630e61;
---color-secondary: #8ED5F0;
+--color-secondary: #B3DEE2;
 --color-dark: #58355E;
 --color-bg: #909590;
 
