--- a/portfolio/src/components/About/About.module.css
+++ b/portfolio/src/components/About/About.module.css
@@ -62,8 +62,9 @@
 }
 
 .aboutItem p {
-    font-size: 20px;
+    font-size: 20px
 }
+
 
 @media screen and (max-width: 830px) {
     .container {
@@ -82,6 +83,7 @@
 
     .aboutItems {
         margin-top: 29px;
+
     }
 
     .aboutItem {
