--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Outfit', sans-serif;
-  background-color: darkgray;
+  background-color: var(--color-secondary);
 }
 
 html {
