--- a/portfolio/src/vars.css
+++ b/portfolio/src/vars.css
@@ -1,6 +1,6 @@
 :root {
 /* Colors */
---color-text: #E5A4CB;
+--color-text: black;
 --color-primary: #630e61;
 --color-secondary: #B3DEE2;
 --color-dark: #58355E;
