--- a/portfolio/src/components/Navbar/Navbar.module.css
+++ b/portfolio/src/components/Navbar/Navbar.module.css
@@ -39,7 +39,7 @@
 
 .menuItems a {
     font-size: 25px;
-    color: var(--color-dark);
+    color: var(--color-text);
     text-decoration: none;
     background: none;
     padding: 10px 0;
