--- a/portfolio/src/components/Navbar/Navbar.module.css
+++ b/portfolio/src/components/Navbar/Navbar.module.css
@@ -92,3 +92,10 @@
         background-color: black;
     }
 }
+
+.resumeContainer {
+    margin: 20px auto;
+    width: 80%;
+    height: 600px;
+    border: 1px solid #ccc;
+}
