--- a/portfolio/src/components/About/About.module.css
+++ b/portfolio/src/components/About/About.module.css
@@ -94,6 +94,7 @@
 
     .content {
         flex-direction: column;
+        padding: 10 px;
     }
 
     .aboutImage {
@@ -106,7 +107,6 @@
     }
 
     .aboutItem {
-        padding-left: 0;
-        padding-right: 0;
+        padding: 20px;
     }
 }
