--- a/portfolio/src/components/About/About.module.css
+++ b/portfolio/src/components/About/About.module.css
@@ -77,11 +77,13 @@
 .aboutItem h3 {
     font-size: 25px;
     font-weight: 600;
+    color: maroon;
 }
 
 .aboutItem p {
     font-size: 20px;
     color: var(--color-text);
+    padding: 5px;
 }
 
 
@@ -108,5 +110,7 @@
 
     .aboutItem {
         padding: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
