--- a/portfolio/src/vars.css
+++ b/portfolio/src/vars.css
@@ -1,10 +1,10 @@
 :root {
     /* Colours */
     --color-text: #fff;
-    --color-primary: #576cbc;
-    --color-secondary: #19376d;
-    --color-dark: #0b2447;
-    --color-bg: #04152d;
+    --color-primary: #F9E0D9;
+    --color-secondary: #912F40;
+    --color-dark: #70798C;
+    --color-bg: #702632;
 
     /* Fonts */
     --font-roboto: "Roboto";
