--- a/portfolio/src/vars.css
+++ b/portfolio/src/vars.css
@@ -1,8 +1,8 @@
 :root {
     /* Colours */
     --color-text: #fff;
-    --color-primary: #F9E0D9;
-    --color-secondary: #912F40;
+    --color-primary: #912F40;
+    --color-secondary: #F9E0D9;
     --color-dark: #70798C;
     --color-bg: #702632;
 
