--- a/portfolio/src/vars.css
+++ b/portfolio/src/vars.css
@@ -1,10 +1,10 @@
 :root {
     /* Colours */
-    --color-text: #fff;
-    --color-primary: #912F40;
-    --color-secondary: #F9E0D9;
-    --color-dark: #70798C;
-    --color-bg: #702632;
+    --color-text: #fff; /* this is the text color */
+    --color-primary: black; /* not seeing where this is being used at */
+    --color-bg: #F9E0D9; /* this is the being used as the background */
+    --color-dark: #70798C; /* this is on the projects for the technologies used */
+    --color-secondary: #702632; /* this is the secondary background stuff */
 
     /* Fonts */
     --font-roboto: "Roboto";
