--- a/portfolio/src/vars.css
+++ b/portfolio/src/vars.css
@@ -1,9 +1,13 @@
 :root {
     /* Colours */
-    --color-text: #fff; /* this is the text color */
-    --color-bg: black; /* not seeing where this is being used at */
-    --color-primary: #F9E0D9; /* this is the being used as secondayr background like nav, about me background, footer, background for history, snd skill bg img and the top of the projects that fades into the secondary color */
-    --color-dark: #70798C; /* this is on the projects for the technologies used */
+    --color-text: #FFFFFA; /* this is the text color */
+
+    --color-bg: #7D869C; /* being used as link color and as title to about me items */
+
+    --color-primary: #F9E0D9; /* this is the being used as secondary background like nav, about me background, footer, background for history, snd skill bg img and the top of the projects that fades into the secondary color */
+
+    --color-dark: #040F16; /* this is on the projects for the technologies used */
+
     --color-secondary: #702632; /* this is the background, contact square in footer, and bg for footer imgs, bg for history text, and for about me text and for the nav bare right side text bg */
 
     /* Fonts */
