--- a/portfolio/src/components/About/About.module.css
+++ b/portfolio/src/components/About/About.module.css
@@ -13,18 +13,18 @@
 }
 
 .link a {
-    color: var(--color-bg);
+    color: var(--color-primary);
     text-decoration: none;
     font-weight: 400;
     background: none;
 }
 
 .link a:hover {
-    color: var(--color-bg);
+    color: var(--color-primary);
 }
 
 .link a:after {
-    color: var(--color-bg);
+    color: var(--color-primary);
 }
 
 .title {
@@ -65,7 +65,7 @@
     border-radius: 20px;
     list-style: none;
     padding: 25px;
-    background-image: linear-gradient(135deg, var(--color-primary), var(--color-text));
+    background-image: linear-gradient(135deg, var(--color-primary), var(--color-secondary));
     background-size: 0 100%;
 }
 
