--- a/portfolio/src/components/About/About.module.css
+++ b/portfolio/src/components/About/About.module.css
@@ -28,7 +28,7 @@
 }
 
 .title {
-    color: var(--color-text);
+    color: var(--color-bg);
     font-size: 35px;
     font-weight: 700;
     letter-spacing: 1.75px;
