--- a/portfolio/src/components/Hero/Hero.module.css
+++ b/portfolio/src/components/Hero/Hero.module.css
@@ -49,12 +49,12 @@
 .contactBtn {
     text-decoration: none;
     background-color: var(--color-primary);
-    color: var(--color-text);
+    color: var(--color-bg);
     border-radius: 100px;
     font-size: 30px;
     font-weight: 600;
     padding: 17px 26px;
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .heroImg {
@@ -86,11 +86,11 @@
     position: absolute;
     width: 30vw;
     height: 30vw;
-    min-width: 300px;
-    min-width: 300px;
-    top: -128px;
+    min-width: 200px;
+    min-width: 200px;
+    top: -118px;
     left: -10vw;
-    border: 764px;
+    border: 700px;
     background-color: rgba(211, 211, 211, 0.7);
     filter: blur(100px);
     z-index: 0;
@@ -98,13 +98,13 @@
 
 .bottomBlur {
     position: absolute;
-    width: 50vw;
+    width: 30vw;
     height: 30vw;
-    min-width: 300px;
     min-width: 200px;
-    top: -128px;
+    min-width: 200px;
+    top: -118px;
     left: 10vw;
-    border: 764px;
+    border: 700px;
     background-color: rgba(211, 211, 211, 0.7);
     filter: blur(100px);
     z-index: 0;
