--- a/portfolio/src/components/About/About.module.css
+++ b/portfolio/src/components/About/About.module.css
@@ -13,18 +13,18 @@
 }
 
 .link a {
-    color: var(--color-primary);
+    color: var(--color-bg);
     text-decoration: none;
     font-weight: 400;
     background: none;
 }
 
 .link a:hover {
-    color: var(--color-primary);
+    color: var(--color-bg);
 }
 
 .link a:after {
-    color: var(--color-primary);
+    color: var(--color-bg);
 }
 
 .title {
@@ -62,11 +62,17 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    border-radius: 20px;
+    border-radius: 50px;
     list-style: none;
     padding: 25px;
     background-image: linear-gradient(135deg, var(--color-primary), var(--color-secondary));
     background-size: 0 100%;
+}
+
+.aboutItemText {
+    border-radius: 20px;
+    background: transparent;
+    padding: 20px;
 }
 
 .aboutItem:hover {
