--- a/portfolio/src/components/Experience/Experience.module.css
+++ b/portfolio/src/components/Experience/Experience.module.css
@@ -1,10 +1,14 @@
 @import "../../vars.css";
 
 .container {
-    color: var(--color-text);
+    background-color: var(--color-secondary);
     margin-top: 79px;
     margin-left: 10%;
     margin-right: 10%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
 }
 
 .title {
@@ -26,12 +30,12 @@
     width: 45%;
     display: flex;
     flex-wrap: wrap;
-    gap: 37px;
+    gap: 30px;
 }
 
 .skill {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     gap: 11px;
 }
@@ -58,6 +62,7 @@ section div img {
     font-size: 25px;
     font-family: var(--font-roboto);
     font-weight: 500;
+    color: var(--color-text);
 }
 
 .history {
@@ -65,6 +70,8 @@ section div img {
     display: flex;
     flex-direction: column;
     gap: 40px;
+    color: var(--color-text);
+    background: transparent;
 }
 
 .historyItem {
@@ -72,25 +79,31 @@ section div img {
     flex-direction: row;
     align-items: center;
     gap: 17px;
-    background: linear-gradient(90deg, var(--color-primary) 0%, var(--color-secondary) 100%);
-    border-radius: 10px;
+    background-color: var(--color-primary);
+    border-radius: 30px;
     padding: 24px;
 }
 
 .historyItem img {
-    width: 35%
+    width: 0%;
+    height: 25%;
 }
 
 .historyItem h3 {
     font-family: var(--font-roboto);
     font-size: 30px;
     font-weight: 500;
+    text-decoration: underline;
+    text-align: center;
+    padding: 10px;
 }
 
 .historyItem p {
     font-family: var(--font-roboto);
     font-size: 25px;
     font-weight: 300;
+    text-align: center;
+    padding: 10px;
 }
 
 .historyItem ul {
@@ -99,6 +112,7 @@ section div img {
     font-size: 25px;
     list-style-type: disc;
     margin-left: 17px;
+    padding: 10px;
 }
 
 @media screen and (max-width: 830px) {
