--- a/portfolio/src/components/Hero/Hero.module.css
+++ b/portfolio/src/components/Hero/Hero.module.css
@@ -14,13 +14,12 @@
 .content {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     color: var(--color-text);
     z-index: 1;
     background: transparent;
     border: none;
     box-shadow: none;
-
 }
 
 .title {
@@ -43,7 +42,7 @@
     background: transparent;
     border: none;
     box-shadow: none;
-
+    padding: 5px;
 }
 
 .contactBtn {
@@ -52,9 +51,9 @@
     color: var(--color-bg);
     border-radius: 100px;
     font-size: 30px;
-    font-weight: 600;
+    font-weight: 900;
     padding: 17px 26px;
-    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
 }
 
 .heroImg {
@@ -81,20 +80,6 @@
         transform: translate(0, -0px);
     }
 }
-
-/* .topBlur {
-    position: absolute;
-    width: 30vw;
-    height: 30vw;
-    min-width: 200px;
-    min-width: 200px;
-    top: -118px;
-    left: -10vw;
-    border: 700px;
-    background-color: rgba(211, 211, 211, 0.7);
-    filter: blur(100px);
-    z-index: 0;
-} */
 
 .bottomBlur {
     position: absolute;
