--- a/portfolio/src/components/Projects/Projects.module.css
+++ b/portfolio/src/components/Projects/Projects.module.css
@@ -1,10 +1,12 @@
 @import "../../vars.css";
 
 .container {
-    margin-top: 76px;
-    color: var(--color-text);
+    margin-top: 79px;
     margin-left: 10%;
     margin-right: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .title {
@@ -12,10 +14,12 @@
     font-weight: 700;
     letter-spacing: 1.75px;
     text-transform: uppercase;
+    color: var(--color-text);
+    text-decoration: underline;
 }
 
 .projects {
-    margin-top: 35px;
+    margin: 35px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
