--- a/portfolio/src/components/Projects/ProjectsCard.module.css
+++ b/portfolio/src/components/Projects/ProjectsCard.module.css
@@ -3,11 +3,12 @@
 .container {
     display: flex;
     flex-direction: column;
-    border-radius: 10px;
+    border-radius: 30px;
     box-shadow: 0 16px 14px 0 rgba(0, 0, 0, 0.5);
     background: linear-gradient(180deg, var(--color-primary) 0%, var(--color-secondary) 100%);
     padding: 18px 24px;
     max-width: 345px;
+    align-items: center;
 }
 
 .container:hover {
@@ -17,6 +18,8 @@
 
 .image {
     margin-bottom: 26px;
+    width: 100%;
+    height: 200px;
 }
 
 .title {
@@ -24,6 +27,9 @@
     font-family: var(--font-roboto);
     font-weight: 700;
     background: none;
+    color: var(--color-bg);
+    text-align: center;
+    text-decoration: underline;
 }
 
 .description {
@@ -32,6 +38,7 @@
     font-weight: 400;
     margin-top: 6px;
     background: none;
+    color: var(--color-text);
 }
 
 .skills {
@@ -43,18 +50,20 @@
     gap: 6px;
     list-style: none;
     background: none;
+    color: var(--color-primary);
 }
 
 .skill {
     font-size: 25px;
     font-weight: 400;
-    background: var(--color-dark);
+    background: var(--color-secondary);
     padding:2px 23px;
     border-radius: 100px;
 }
 
 .skill:hover {
-    background: var(--color-secondary);
+    background: var(--color-bg);
+    color: var(--color-primary);
     transition: background 0.3s;
 }
 
@@ -73,9 +82,11 @@
     font-weight: 600;
     padding: 1px 22px;
     border-radius: 100px;
+    color: var(--color-primary);
 }
 
 .link:hover {
-    background: var(--color-dark);
+    background: var(--color-bg);
+    color: var(--color-dark);
     transition: background 0.3s;
 }
